# krunner-pass

./: .gitignore  .kde-ci.yml  CMakeLists.txt  README.md  config.cpp  config.h  config.ui  install.sh  kcm_krunner_pass.json  krunner_pass.notifyrc  pass.cpp  pass.h  pass.json  plasma-runner-pass.desktop  postinst  uninstall.sh
config/: pass_config.cpp  pass_config.h  plasma-runner-pass_config.desktop
